# Tex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
Tex/: asgi.py  settings.py  urls.py  wsgi.py
api/: apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  utils.py  via_cep.py  views.py
